# django-s3-storage-bowser

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: build-package.yaml
s3_storage_browser/: apps.py  views.py
s3_storage_browser/migrations/: 0001_s3_storage_browser_permission.py
s3_storage_browser/static/: index.css  index.js
s3_storage_browser/templates/: index.html
s3_storage_browser/templates/s3_storage_browser/: index.html
s3_storage_browser_frontend/: README.md  move-assets.js  package-lock.json  package.json  vite.config.ts
s3_storage_browser_frontend/src/: App.tsx
storage-browser/: apps.py  views.py
storage-browser-frontend/: README.md  index.html  move-assets.js  vite.config.ts
storage-browser/static/: index.css
