[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ah-django-s3-storage-browser"
version = "0.1"
description = "A Django app to show an S3 storage browser"
readme = "README.rst"
requires-python = ">= 3.8"
authors = [
    {name = "Chris Chomicki", email = "ndlyga@apphammer.co"},
    {name = "Nick Lyga", email = "ndlyga@apphammer.co"},
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.urls]
Homepage = "https://www.apphammer.co/"

[tool.setuptools.packages.find]
where = ["."]